[package]
name = "comodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
cpal = "0.13.5"
dioxus = { version = "0.2.4", features = ["desktop"] }
dioxus-free-icons = { version = "0.5.0", features = ["ionicons"] }
symphonia = "0.5.1"
